    - [ 1511 ] PySet doesn't support Java serialization
    - [ 1426 ] JSR 223 Bindings changes not taking effect and leaking between threads; unnecessary synchronization
    - [ 1548 ] Parentheses in CLASSPATH cause errors in jython.bat
    - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
      during Django or Pylons development mode reloading)

Jython 2.5.1rc3
  Bugs Fixed
    - [ 1466 ] wrong handling of append only files

Jython 2.5.1rc2
  New Features
    - zxJDBC supports the with-statement: connections are committed or rollbacked; cursors are closed 
  Bugs Fixed
    - [ 1079 ] fixed regression on issue: twisted.python.threadable module: missing attribute '_RLock'
    - [ 1461 ] assert statement should lookup AssertionError using getglobal
    - [ 1425 ] distutils/util.py assumes too much posix
    - [ 1457 ] Cannot write an array in a file opened in r+b mode.
    - [ 1382 ] __cmp__ on certain types raises ArrayStoreException
    - [ 1443 ] Can't update() hashlib.sha1() with array.array('c')
    - [ 1444 ] Can't zlib.compress() with array.array('c')
    - [ 1458 ] Builtin codecs aren't available without standard lib

Jython 2.5.1rc1
  New Features
    - Upgraded to ANTLR 3.1.3
    - [ 1859477 ] Dynamically loaded ServletFilters like PyServlet
    - Built in JSR 223 scripting engine, with LiveTribe JSR 223 implementation for JDK 5
    - Jython "-J-classpath cp_args_here" now works as expected for unix shell.
  Bugs Fixed
    - [ 645615 ] cannot import through symbolic links
    - [ 1366 ] parsing of lamda expression fails
    - [ 1365 ] continuation lines fail in interactive interpreter
    - [ 1377 ] Event names shadowed by a field name on Java types leads to a NPE
    - [ 1381 ] Redundant declarations of interface implementation hides overriden methods
    - [ 1189 ] MD5 hash is incorrectly calculated when string contains non-latin chars and using python md5 lib
    - [ 1802339 ] Problem printing unicode when stdout intercepted